# lotus

./: .AWSCLIV2.pkg.icloud  .deepsource.toml  .dockerignore  .editorconfig  .env dev  .env.dev  .env.prod  .eslintrc.json  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.backend  Dockerfile.db  Dockerfile.frontend  LICENSE  Pipfile  Procfile  README.md  SECURITY.md  app.json  build.sh  db-extensions.sql  docker-compose.dev.yaml  docker-compose.prod-no-build.yaml  docker-compose.prod.yaml  docker-compose.yaml  dump.rdb  frontend.Dockerfile  generator_invoice_pdf.py  go.work  go.work.sum  invoice_generator.js  manage.py  nginx.conf  package-lock.json  package.json  project_schema.yaml  requirements.txt  (+2 more)
backend/: .coveragerc  Dockerfile  Dockerfile.backend  Pipfile  Procfile  README.md  consumer.py  package.json  project_schema.yaml  pyproject.toml  pytest.ini
backend/api/: views.py
backend/api/serializers/: model_serializers.py  nonmodel_serializers.py  webhook_serializers.py
backend/locustfiles/: track_event.py
backend/lotus/: __init__.py  cache_utils.py  lotus_celery.py  mozilla.py  settings.py  urls.py  wsgi.py
backend/metering_billing/: InvoiceToPDF.py  __init__.py  admin.py  apps.py  auth_utils.py  billable_metrics.py  custom_exception_handler.py  demos.py  experiment_utils.py  invoice.py  invoice_pdf.py  middleware.py  model_backend.py  models.py  netsuite_csv.py  openapi_hooks.py  payment_processors.py  payment_providers.py  permissions.py  s3_utils.py  tasks.py  taxes.py  utils.py  view_utils.py  webhooks.py
backend/metering_billing/aggregation/: billable_metrics.py  common_query_templates.py  counter_query_templates.py  custom_query_templates.py  gauge_query_templates.py  query_templates.py  rate_query_templates.py  stateful_query_templates.py
backend/metering_billing/auth/: __init__.py  auth_backends.py  auth_utils.py
backend/metering_billing/exceptions/: exceptions.py  handler.py
backend/metering_billing/kafka/: consumer.py  producer.py  singleton.py
backend/metering_billing/migrations/: 0001_initial.py  0002_alter_billingplan_flat_rate_and_more.py  0004_alter_invoice_status_alter_organization_stripe_id.py  0005_invoice_payment_intent_id.py  0006_merge_20220906_2201.py  0008_alter_billablemetric_unique_together_and_more.py  0009_remove_subscription_next_plan_and_more.py  0010_alter_invoice_status.py  0011_alter_billingplan_billing_plan_id_and_more.py  0012_alter_billablemetric_aggregation_type_and_more.py  0013_billablemetric_recurring_plancomponent_max_amount_and_more.py  0015_billablemetric_metric_name_and_more.py  0016_alter_billablemetric_unique_together_and_more.py  0017_alter_invoice_status.py  0019_subscription_subscription_uid_and_more.py  0021_auto_20220927_0715.py  0022_remove_plancomponent_cost_per_metric_and_more.py  0023_remove_billablemetric_unique_with_property_name_and_more.py  0024_alter_billingplan_components_and_more.py  0025_customer_billing_address_customer_email.py  0026_alter_user_email.py  0027_rename_payment_intent_id_invoice_external_payment_obj_id_and_more.py  0028_billingplan_replacement_billing_plan_and_more.py  0029_subscription_flat_fee_already_billed_and_more.py  0031_subscription_auto_renew_billing_plan_and_more.py  0032_rename_subscription_uid_subscription_subscription_id_and_more.py  0033_remove_plancomponent_cost_per_batch_currency_and_more.py  0034_remove_billingplan_currency_remove_customer_currency_and_more.py  0035_remove_organization_stripe_id.py  0036_categoricalfilter_numericfilter_and_more.py  0037_alter_billablemetric_billable_metric_name.py  0038_historicaluser_historicalsubscription_and_more.py  0039_alter_historicalalert_options_and_more.py  0040_remove_customer_payment_provider_and_more.py  0041_rename_payment_provider_ids_customer_payment_providers_and_more.py  0042_backtest_remove_customer_billing_address_and_more.py  0043_alter_alert_organization_alter_apitoken_organization_and_more.py  0044_billingplan_status_historicalbillingplan_status_and_more.py  0045_alter_billingplan_status_and_more.py  0046_rename_old_plan_backtestsubstitution_original_plan_and_more.py  (+262 more)
backend/metering_billing/serializers/: auth_serializers.py  backtest_serializers.py  experiment_serializers.py  internal_serializers.py  model_serializers.py  new.json  payment_processor_serializers.py  payment_provider_serializers.py  request_serializers.py  response_serializers.py  serializer_utils.py
backend/metering_billing/services/: organization.py  user.py
backend/metering_billing/template_tags/: render_vite_bundle.py
backend/metering_billing/templates/: index.html
backend/metering_billing/tests/: conftest.py  test_addons.py  test_alerts.py  test_billable_metric.py  test_calculate_invoices.py  test_cancel_sub.py  test_components.py  test_customer.py  test_draft_invoices.py  test_event_preview.py  test_get_access.py  test_integrations.py  test_invoice_gen.py  test_metrics.py  test_organization.py  test_plans.py  test_raw_sql.py  test_register.py  test_session.py  (+4 more)
backend/scripts/: heroku_release.sh  run-codestyle-docker.sh  run-tests-docker.sh  start_backend.dev.sh  start_backend.prod.sh  start_consumer.dev.sh  start_consumer.sh  start_redpanda.sh
backend/tests/: conftest.py  test_addons.py  test_alerts.py  test_billable_metric.py  test_customer.py  test_draft_invoices.py  test_get_access.py  test_integrations.py  test_organization.py  test_plans.py  test_register.py  test_subscription.py  test_timezones.py  test_track_event.py
(+1161 files in other folders)
