[tool.ruff]
line-length = 99

# Enable Pyflakes `E` and `F` codes by default.
select = ["E", "F"]
ignore = ["E501"]

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
per-file-ignores = {}

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Assume Python 3.9.
target-version = "py39"

[tool.ruff.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10

[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Diego Escobedo <diego@escobedo.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.9"
django = "==4.0.5"
django-cors-headers = ">=3.13.0,<3.14"
django-cryptography = ">=1.1.0,<1.2"
django-extensions = ">=3.2.0,<3.3"
django-grappelli = ">=3.0.3,<3.4"
django-loginas = ">=0.3.10,<0.4"
django-model-utils = ">=4.2.0,<4.3"
django-money = ">=3.0.0,<3.1"
django-q = ">=1.3.9,<1.4"
djangorestframework = ">=3.13.1,<3.14"
djangorestframework-api-key = ">=2.2.0,<2.3"
jsonfield = ">=3.1.0,<3.2"
pre-commit = ">=2.20.0,<2.21"
psycopg2 = "*"
python-dateutil = ">=2.8.2,<2.9"
python-dotenv = ">=0.20.0,<0.21"
redis = ">=3.5.3,<4.0"
sentry-sdk = ">=1.11.0"
stripe = ">=4.0.2,<4.1"
gunicorn = "*"
whitenoise = "*"
dj-database-url = "*"
django-heroku = "*"
django-celery-beat = "*"
django-vite = "*"
drf-spectacular = "*"
faker = "*"
django-redis = "*"
posthog = "*"
python-decouple = "*"
celery = {extras = ["redis"], version = "*"}
model-bakery = "*"
django-simple-history = "<3.1.1"
django-rest-knox = "*"
django-anymail = {extras = ["mailgun"], version = "*"}
numpy = "*"
pytz = "*"
django-activity-stream = "*"
kafka-python = "*"
cronitor = "*"
svix = "*"
pyjwt = "*"
drf-standardized-errors = {extras = ["openapi"], version = "*"}
boto3 = "*"
reportlab = "*"
jinja2 = "*"
sqlparse = "*"
ruff = "*"
"ruamel.yaml" = "*"
django-timezone-field = "*"
braintree = "*"
pycountry = "*"
taxjar = "*"
usaddress-scourgify = "*"
psycopg2-binary = "*"


[tool.poetry.group.dev.dependencies]
platformdirs = "*"
pytest-django = "*"
locust = "*"
django-silk = "*"
pytest-cov = "*"
black = "*"
sqlalchemy = "*"
ruff = "*"
pylint = "*"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
